--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
@@ -134,8 +134,6 @@ hr {
     margin: 1px;
     font-size: 12px;
     font-weight: bolder;
-    display: flex;
-    justify-content: space-between;
 }
 .item p {
     margin-left: 20px;
@@ -267,7 +265,7 @@ tbody tr:last-child td:first-child {
         max-height: 65dvh;
         height: 65dvh;
     }
-    .total-jogos, .aposta, .ganho, .cambista-paga, .resultado, .status {
+    .total-jogos, .aposta, .ganho, .cambista-paga, .resultado {
         display: flex;
         justify-content: space-between;
     }
@@ -289,6 +287,10 @@ tbody tr:last-child td:first-child {
     }
  }
  @media only screen and (max-width: 1024px) {
+    .item .cotacao {
+        display: flex;
+        justify-content: space-between;    
+    }
     .sec {
         margin-bottom: 10px;
         margin-right: 0px;
