--- a/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
+++ b/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
@@ -26,6 +26,7 @@
     padding: 7px 1em 7px 1em;
 }
 .cupom-header {
+    border-bottom: 2px dotted var(--bottom-bar);
     background-color: var(--game);
     padding: 10px;
     color: var(--foreground);
