Fix: Translate of partnership terms page

--- a/src/app/informacoes/informacoes.component.html
+++ b/src/app/informacoes/informacoes.component.html
@@ -38,7 +38,7 @@
                             {{'paginas.jogo-responsavel' | translate}}
                         </a>
                         <a routerLinkActive="active" [routerLink]="['/informacoes/termos-afiliados']" *ngIf="hasAfiliados">
-                            {{'paginas.partnership-terms' | translate}}
+                            {{'paginas.termos-afiliados' | translate}}
                         </a>
                     </div>
                 </div>
