fix: Increase the border radius and adjust margins for better presentation of the components.

--- a/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.css
+++ b/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.css
@@ -59,6 +59,7 @@ hr {
 #jogo-table {
     display: flex;
     flex-direction: row;
+    border-radius: 10px;
     background-color: var(--game);
     border-bottom: 2px dotted var(--bottom-bar);
 }
