--- a/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.html
+++ b/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.html
@@ -33,7 +33,7 @@
                                 </p>
                             </div>
                         </td>
-                        <td class="item">
+                        <td class="item resultado">
                             <p class="jogo-resultado" style="float:right" *ngIf="item.encerrado && !item.removido; else resultado">
                                 Encerrado <br />
                                 <span [ngClass]="resultadoClass(item)">
