--- a/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
+++ b/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
@@ -28,13 +28,14 @@
     border-radius: 5px;
 }
 .cupom-header {
-    margin-top: 12px;
+    margin-top: 11px;
     border-bottom: 2px dotted var(--bottom-bar);
     background-color: var(--game);
     padding: 10px;
     color: var(--foreground);
     font-size: 12px;
     padding-top: 25px;
+    border-radius: 5px;
 }
 .cupom-header p {
     font-size: 13px;
@@ -202,13 +203,15 @@ hr {
     border-radius: 10px 10px 0 0;
     overflow: hidden;
 }
-tbody tr:last-child td:last-child {
-    border-radius: 0 0 6px 0;
+td.info-cupom {
+    border-radius: 5px 0 0 5px;
 }
-tbody tr:last-child td:first-child {
-    border-radius: 0 0 0 3px;
+td.resultado {
+    border-radius: 0 5px 5px 0;
 }
-
+tr.cupom {
+    border-bottom: 2px dotted var(--bottom-bar);
+}
 table th:first-child,
 table tr td:first-child {
     max-width: 45px;
@@ -246,10 +249,11 @@ table tr td:nth-child(3) {
         max-height: 55vh;
     }
     .cupom-header {
-        margin: 0 5px;
+        margin: 0 3px;
         max-height: none;
         column-count: 1;
         margin-bottom: 15px;
+        border-radius: 10px;
     }
     .table-container,
     .modal-header .info-horario {
